--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,7 +31,7 @@ section{
 #sushie{
   background-color:#cce0ff;
 }
- @media only screen and (min-width : 768px) {
+ @media(min-width : 768px) {
    
    .navbar-collapse.collapse {
         display: none!important;
