--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,12 +31,12 @@ section{
 #sushie{
   background-color:#cce0ff;
 }
- @media(min-width : 768px) {
-   
+
+@media screen and (min-width: 768px) {    
    .navbar-collapse.collapse {
         display: none!important;
     }
+}
 
-    }
 
 
